# rust-web-game-skeleton

./: README.md  generate.sh
.github/workflows/: ci.yml  pages.yml
client/: Cargo.toml  package-lock.json  package.json
client/src/: lib.rs
client/src/app/: chat.rs  connect.rs  game.rs  menu.rs  mod.rs
codegen/: Cargo.toml
common/: Cargo.toml
common/src/: util.rs
common/src/proto/: handshake.rs  io.rs  mod.rs
dependabot/: 1.js  index.html  index.js
dependabot/doc/: crates.js  search-index.js  settings.html  source-files.js
dependabot/doc/anyhow/: all.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
dependabot/doc/anymap/: all.html  enum.Entry.html  index.html  struct.Map.html  struct.OccupiedEntry.html  struct.VacantEntry.html  type.AnyMap.html
dependabot/doc/bincode/: all.html  enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.options.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Config.html  struct.Serializer.html  type.Error.html  type.Result.html
dependabot/doc/block_buffer/: index.html  struct.BlockBuffer.html
dependabot/doc/boolinator/: all.html  index.html  trait.Boolinator.html
dependabot/doc/bumpalo/: all.html  index.html  struct.Bump.html  struct.ChunkIter.html
dependabot/doc/byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
dependabot/doc/bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html
dependabot/doc/cfg_match/: all.html  index.html  macro.cfg_match.html
dependabot/doc/codegen/: all.html  derive.Gen.html  index.html  sidebar-items.js
dependabot/doc/common/: all.html  (+4 more)
master/: 1.js  index.js
master/doc/: search-index.js  settings.html  source-files.js
server/: Cargo.toml
server/src/: main.rs  session.rs
(+21126 files in other folders)
