[package]
name = "rust-web-game-skeleton-server"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/SOF3/rust-web-game-skeleton"
homepage = "https://github.com/SOF3/rust-web-game-skeleton"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
futures = "0.3.12"
getset = "0.1.1"
log = "0.4.13"
pretty_env_logger = "0.4.0"
structopt = "0.3.21"
tokio = {version = "1.0.2", features = ["full"]}
tokio-tungstenite = "0.13.0"
rust-web-game-skeleton-common = {version = "0.2.0", path = "../common"}
tungstenite = "0.12.0"
